<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="180"
        android:entries="@array/changelanguage"
        android:entryValues="@array/languages"
        android:key="languages"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/changelanguage"/>

    <Preference
        android:key="CHANGE_USER"
        android:defaultValue="1"
        android:title="@string/changeuser"
        android:summary="@string/changeusersummary">
    </Preference>

    <EditTextPreference
        android:key="PREF_SERVER"
        android:title="Server phone number"
        android:summary="Tap to enter new phone number"
        android:dialogTitle="Enter text"
        android:defaultValue="1"
        android:inputType="number"/>

    <Preference
        android:title="@string/infotitle"
        android:summary="@string/info">

    </Preference>

</PreferenceScreen>
