<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".DriverActivities.DriverActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settitle"
        android:textSize="50dp"
        android:layout_margin="20dp"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textAllCaps="false"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword|number"
        android:hint="@string/number"
        android:textAlignment="center" />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/available"
        android:onClick="setAvailable"
        android:padding="15dp"
        android:layout_margin="15dp" />
    </LinearLayout>