<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="com.example.student.ctexiv1.RiderSecondActivity">
    <TextView
        android:id="@+id/drivername"
        android:freezesText="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drivername"
        android:textSize="50dp"/>
    <TextView
        android:id="@+id/drivernumber"
        android:freezesText="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drivernumber"
        android:textSize="35dp"/>
    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:textSize="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:onClick="cancel"/>
</LinearLayout>
